--- a/task5_2.html
+++ b/task5_2.html
@@ -14,5 +14,47 @@
     </a>
     <span>个人中心</span>
 </div>
+
+<div class="main">
+    <div class="main_img">
+        <img src="images/person_pic.png">
+    </div>
+
+    <ul class="infomation">
+        <li><span class="p_name">高素雅</span><span class="p_age">51岁</span> </li>
+        <li class="p_adress"><span class="p_age">北京.通州.果园</span> </li>
+    </ul>
+</div>
+
+<div class="sub">
+    <p id="sub_p">专业技能</p>
+</div>
+<ul class="content">
+    <li>
+        <span id="label1"><img src="images/person_star.png">住家</span>
+        <span id="label2"><img src="images/person_star.png">不含餐</span>
+    </li>
+    <li>
+        <span class="detail">从业年限</span>
+        <span class="answer1">0～3年</span>
+    </li>
+    <li>
+        <span class="detail">工作时间</span>
+        <span class="answer1">全天</span>
+    </li>
+    <li>
+    <span class="detail">服务价格</span>
+    <span class="answer2">25元/小时</span>
+    </li>
+    <li>
+    <span class="detail">自我介绍</span>
+    <span class="answer3">可以洗衣、做饭、照顾老人。在护工方面有5年的经验，经验丰富。</span>
+</li>
+</ul>
+
+<div class="bottom">
+    <button class="message" type="submit">留言</button>
+    <button class="contract" type="submit">电话联系</button>
+</div>
 </body>
 </html>
